ng fix issue with article alignment on different devices widths

--- a/website-angular-spa/src/app/features/article/components/article-preview/article-preview.component.scss
+++ b/website-angular-spa/src/app/features/article/components/article-preview/article-preview.component.scss
@@ -1,24 +1,30 @@
-.selectable-card {
-  max-width: 400px;
-  height: 500px;
-  margin: 10px;
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  cursor: pointer;
-  transition:
-    box-shadow 0.3s,
-    transform 0.2s;
+  .selectable-card {
+    max-width: 400px;
+    height: 500px;
+    margin: 10px;
 
-  &:hover {
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-    transform: translateY(-2px);
+    cursor: pointer;
+    transition:
+      box-shadow 0.3s,
+      transform 0.2s;
+
+    &:hover {
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      transform: translateY(-2px);
+    }
+
+    .card-content {
+      margin-top: 15px;
+    }
   }
 
-  .card-content {
-    margin-top: 15px;
+  .card-image {
+    height: 200px;
+    object-fit: cover;
   }
-}
-
-.card-image {
-  height: 200px;
-  object-fit: cover;
 }
